--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "glightbox": "^3.1.0",
     "jquery": "^3.6.0",
     "mysql": "^2.18.1",
     "next": "12.0.3",
